aws/00-petclinic-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-ns
  labels:
    admission.datadoghq.com/enabled: "true"
