aws/31-petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name: petclinic-alb
    alb.ingress.kubernetes.io/conditions.petclinic: >
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName":"X-From-CloudFront","values":["cloudfront-only"]}}]
    external-dns.alpha.kubernetes.io/hostname: yourcloudless.site

    # 헬스체크 설정 LB전용 HealthCheck
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP

spec:
  ingressClassName: alb
  rules:
    - host: yourcloudless.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic
                port:
                  number: 80
